# IStr

./: CHANGELOG.md  IStr.cabal  IStr.cabal~  default.nix
src/: MyLib.hs~
src/Text/: IStr.hs  IStr.hs~
