cabal-version:      3.0
name:               IStr
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             lazyLambda
maintainer:         galen.sprout@gmail.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Text.IStr
    -- other-modules:
    -- other-extensions:
    
    build-depends:    base
                    , template-haskell
                    , haskell-src-meta
                    , text
                    , bytestring
    hs-source-dirs:   src
    default-language: Haskell2010
